RFC-007: optimizations implementation
